# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "score_platform",
    version = "1.0.1",
    compatibility_level = 0,
)

###############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Additional Python rules provided by aspect, e.g. an improved version of
# `py_binary`. But more importantly, it provides `py_venv`.
bazel_dep(name = "aspect_rules_py", version = "1.4.0")

###############################################################################
#
# Packaging dependencies
#
###############################################################################
bazel_dep(name = "rules_pkg", version = "1.0.1")

###############################################################################
#
# Buildifier dependency
# Provides formatting and linting of Bazel files.
#
###############################################################################
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

###############################################################################
#
# Generic linting and formatting rules
#
###############################################################################
bazel_dep(name = "aspect_rules_lint", version = "1.4.2")

###############################################################################
#
# Java version
#
###############################################################################
bazel_dep(name = "rules_java", version = "8.11.0")

###############################################################################
#
# Misc. dependency
#
###############################################################################

bazel_dep(name = "score_python_basics", version = "0.3.2")

###############################################################################
#
# Checker rule for CopyRight checks/fixes
#
###############################################################################
bazel_dep(name = "score_cr_checker", version = "0.2.2")

###############################################################################
#
# StarPLS LSP server
#
###############################################################################
bazel_dep(name = "score_starpls_lsp", version = "0.1.0")
# Checker rule for CopyRight checks/fixs

bazel_dep(name = "score_docs_as_code", version = "0.4.4")
bazel_dep(name = "score_process", version = "1.0.4")

###############################################################################
#
# TRLC
#
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
bazel_dep(
    name = "trlc",
    version = "0.0.0",
)

pip.parse(
    hub_name = "trlc_renderer_dependencies",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tools/trlc_renderer:requirements.txt",
)

use_repo(pip, "trlc_renderer_dependencies")

git_override(
    module_name = "trlc",
    remote = "https://github.com/castler/trlc.git",
    commit = "7133093d0ebfa511bbb25d0798c952de7c0bb1a4",
    #remote = "https://github.com/bmw-software-engineering/trlc.git",
)   #commit = "4d88708905c893110061bc3052b731131c0a214b",

###############################################################################
#
# Lobster
#
###############################################################################
bazel_dep(
    name = "lobster",
    version = "0.0.0",
)

git_override(
    module_name = "lobster",
    remote = "https://github.com/castler/lobster.git",
    commit = "a85472cf03512705fce1681867da66d23a229e1f",
)
